<resources>
    <string name="app_name">Руководство по Apex Legends</string>
    <string name="head">Руководство для компьютерной \nигры Apex Legends</string>
    <string name="bottom">Разработано студентом \nУмралинов Е.С.</string>
    <string name="info">Apex Legends — компьютерная игра в жанре многопользовательского геройского шутера от первого лица и королевской битвы, разработанная студией Respawn Entertainment и выпущенная компанией Electronic Arts для платформ Windows, PlayStation 4 и Xbox One в 2019 году.</string>
    <string name="game">Информация об игре</string>
    <string name="maps">Карты</string>
    <string name="leg">Легенды</string>
    <string name="guns">Оружие</string>
    <string name="uti">Снаряжение</string>
    <string name="maps1">На данный момент в игре существует пять карт. Первой картой в игре стала «Каньон Кингс». В третьем сезоне игры добавили карту под названием «Край света». Карту «Олимп» разработчики добавили в седьмом сезоне. Оставшиеся две карты получили названия «Место бури» и «Расколотая луна» и были добавлены в одиннадцатом и пятнадцатом сезонах соответственно.</string>
    <string name="calc">Калькулятор чувствительности мыши</string>
    <string name="test">Откройте для себя растущую коллекцию разнообразных легенд, глубокие тактические командные бои и смелые инновации, которые выходят далеко за рамки «КоролОткройте для себя растущую коллекцию разнообразных легенд, глубокие тактические командные бои и смелые инновации, которые выходят далеко за рамки «КоролОткройте для себя растущую коллекцию разнообразных легенд, глубокие тактические командные бои и смелые инновации, которые выходят далеко за рамки «КоролОткройте для себя растущую коллекцию разнообразных легенд, глубокие тактические командные бои и смелые инновации, которые выходят далеко за рамки «КоролОткройте для себя растущую коллекцию разнообразных легенд, глубокие тактические командные бои и смелые инновации, которые выходят далеко за рамки «КоролОткройте для себя растущую коллекцию разнообразных легенд, глубокие тактические командные бои и смелые инновации, которые выходят далеко за рамки «КоролОткройте для себя растущую коллекцию разнообразных легенд, глубокие тактические командные бои и смелые инновации, которые выходят далеко за рамки «Корол</string>
    <string name="info1">Откройте для себя растущую коллекцию разнообразных легенд, глубокие тактические командные бои и смелые инновации, которые выходят далеко за рамки «Королевской битвы», — и всё это в суровом мире, где возможно всё. Встречайте новую эпоху в жанре геройских шутеров.</string>
    <string name="m1">Каньон Кингс</string>
    <string name="m2">Край света</string>
    <string name="m3">Олимп</string>
    <string name="m4">Место бури</string>
    <string name="m5">Расколотая луна</string>
    <string name="gunin">Оружие - основной способ нанесения урона в Apex Legends. Эффективность и огневую мощь оружия можно повысить с помощью приспособлений, которые могут помочь стабилизировать оружие, увеличить размер магазина, изменить оптику и многое другое.</string>
    <string name="typegu">Все оружия делятся на семь классов. Оружие одного и того же класса имеет схожие характеристики, такие как скорость передвижения при наведении прицела, время обращения и ограничения на приспособления, которые может использовать оружие</string>
    <string name="ar">Штурмовые винтовки являются наиболее универсальной группой оружия, подходящей как для боя на средней, так и на ближней дистанции.</string>
    <string name="smg">Пистолеты-пулеметы - это оружие с высоким dps для ведения боя на близкой дистанции при быстром перемещении и обращении.</string>
    <string name="light">Пулеметы наносят большой урон своими большими магазинами, но обладают медленным перемещением и управляемостью, что делает их более подходящими для применения на средней дистанции.</string>
    <string name="mark">Марксманское оружие - это эффективное по боеприпасам оружие, которое находится между штурмовыми винтовками и снайперскими винтовками по урону, скорострельности и эффективной дальности стрельбы.</string>
    <string name="sniper">Снайперские винтовки обладают высокой поражающей способностью и точностью на дальних дистанциях, но менее оптимальны вблизи из-за низкой скорострельности и управляемости.</string>
    <string name="shotguns">Дробовики - это специализированное оружие ближнего боя, наносящее большой урон одним выстрелом, что делает их отличными для игры в укрытиях.</string>
    <string name="pistols">Пистолеты - это легкое оружие, которое может проигрывать в наносимом уроне, но обеспечивает максимально быстрое обращение и передвижение по всем направлениям, что делает их надежным вторичным оружием.</string>
    <string name="legends">Легенды - это игровые персонажи Apex Legends, каждый из которых отличается от другого своими способностями, стилем игры, индивидуальностью и предысторией. Новая легенда, как правило, появляется в начале сезона.</string>
    <string name="prev">Демонстрация карты в игре</string>
    <string name="clas">Каждая легенда является частью класса, которые классифицируются между «Штурм», «Столкновение», «Разведка», «Контроль» и «Поддержка». Каждый из них дает вашей легенде уникальный набор навыков.</string>
    <string name="canyon">На острове планеты Солас, известном как Каньон Кингс, не было ничего, кроме скромного поселения, пока IMC не выбрали его для постройки центра научно-исследовательских разработок. Здесь расположились авиабаза, водоочистная установка и множество других объектов для поддержки операций IMC. Чтобы выпустить пар, размещенные здесь солдаты IMC сражались в состязаниях, напоминавших гладиаторские бои и прозванных «Куполом грома». Впоследствии они переросли в Игры, какими мы их знаем сегодня. Здесь также находились тайные объекты IMC — такие как сверхсекретный проект в сфере фазовых технологий и радикальная программа по созданию армии симулякров, приводимой в действие единым мозгом.</string>
    <string name="WE">Талос, суровая планета с высокой вулканической активностью, считался непригодным для жизни, и тут обосновались лишь небольшие луддитские поселения. Но когда в его недрах обнаружили редкий минерал, IMC развернули здесь бурную деятельность. Для борьбы с естественными потоками лавы и обеспечения добычи ресурсов были возведены охладительные башни. Весь этот объект получил оптимистичное название «Новое начало», а вокруг него вырос городок, известный как Край света.</string>
    <string name="Olympus">Построенный на мечтах Олимп был утопией, парящей в облаках над Псаматом. Здесь самые светлые умы Внешних земель могли собираться и обмениваться идеями, которые становились прорывами в науке и искусстве. Однако авария в экспериментальном исследовательском комплексе породила фазовый разлом — огромный пузырь фазовой энергии, — и лучшие из лучших поспешно оставили город. При поддержке Синдиката наёмников компания «Хаммонд Роботикс» решила превратить Олимп в новую арену для игр Apex.</string>
    <string name="SP">На этом заброшенном острове когда-то кипела жизнь. Место бури, красивое и богатое ресурсами, было главным кандидатом для первых экспедиций IMC на планету Гея. Однако отряды IMC быстро поняли, что на остров часто налетают сильные тропические бури, и поблизости было основано постоянное поселение — город Суотамо. По мере того как рос город, IMC построили в Месте бури ловцы бурь, чтобы получать достаточно энергии.</string>
    <string name="BM">Клио, луна Борея, некогда была целой... а затем метеорит и миф раскололи её на части. Поначалу жители Борея не знали, что метеор не только расколол спутник и причинил поверхностные разрушения, но и обрёк всю планету на уничтожение. Но когда учёные обнаружили связь между судьбой луны и ростом количества разрушительных метеорологических явлений, жители Борея объединились и дали клятву излечить Клио. Так родился проект «Надежда». Некогда необитаемый спутник превратился в оживлённую колонию, полную исследователей, инженеров и строителей. Работники латали разломы, небесные камни превращались в поля, и на свет появлялись всё новые технологии.</string>
    <string name="ash">Злобная подстрекательница\n\nДоктор Эшли Рид, рождённая в беспощадном Фронтире, ещё человеком поняла, что лишь она одна готова о себе заботиться и больше никто. Однажды группа наёмников поручила ей одно щекотливое дело: выкрасть источник экспериментального топлива, который исследовали в городе Олимпе во Внешних землях. Для Рид это была идеальная работа, ведь она уже давно внедрилась в группу исследователей и психологически манипулировала ими. Когда в лаборатории запустилось самоуничтожение, она погибла. Хотя не совсем.\n\nНастоящее имя: Доктор Эшли Рид\nВозраст: 122\nРодной мир: Неизвестно\nКласс: Штурм\nТактическое умение: Дуговые оковы\nПассивное умение: Приговор — смерть\nСпецумение: Фазовый разрыв</string>
    <string name="fuse">Бомбический эксперт по взрывчатке\n\nЛюбитель женщин, свой братан для мужчин и просто Мужик с большой буквы. Фьюз — это целая подрывная бригада в одном лице... Что он и сам прекрасно знает. Этот неунывающий подрывник с неуёмным энтузиазмом с ног до головы увешан взрывчаткой. Уверенности Фьюзу хватает, а вот планирования — не очень. Он привык сначала всё взрывать, а только потом задавать вопросы, и никогда не против ввязаться в очередную заварушку.\n\nНастоящее имя: Уолтер Фицрой мл.\nВозраст: 55\nРодной мир: Сальво\nКласс: Штурм\nТактическое умение: «Кассетный кастет»\nПассивное умение: Гренадер\nСпецумение: Джекпот</string>
    <string name="mag">Бунтарка-воевода\n\nМаргарет Кохере — женщина, которая однажды станет известна как Безумная Мэгги, росла круглой сиротой в одном из самых пыльных и унылых уголков Сальво. Ей посчастливилось встретить родственную душу: безрассудного и смелого мальчишку по имени Уолтер Фицрой. Они были не разлей вода и уже в подростковом возрасте стали наёмниками. В конце концов их дуэт перерос в Зуботрещину — мощную банду наёмников. Именно здесь она получила свое прозвище Безумная Мэгги. Но когда соперник-воевода Сандрингем Келли заключил перемирие с Синдикатом, все надежды Мэгги на независимость Сальво рухнули. Фьюз бросил её и отправился на игры, и Мэгги пришла в ярость...\n\nНастоящее имя: Маргарет Кохере\nВозраст: 56\nРодной мир: Сальво\nКласс: Штурм\nТактическое умение: 	Бур восстания\nПассивное умение: Гнев воеводы\nСпецумение: Шар-баба</string>
    <string name="bang">Профессиональный солдат\n\nБангалор родилась в семье военных. Как и её родители и четыре старших брата, она служила в IMC и была превосходным солдатом всю свою жизнь. Верная делу IMC, Бангалор была лучшей в своем классе Военной академии IMC и единственной из курсантов, кто сумел разобрать «Миротворец», оборудовать его «Точным чоком» и собрать обратно менее чем за двадцать секунд (с завязанными глазами).\n\nНастоящее имя: Анита Уильямс\nВозраст: 55\nРодной мир: Гридирон\nКласс: Штурм\nТактическое умение: Дымовая пушка\nПассивное умение: Ускоренный марш\nСпецумение: Раскаты грома</string>
    <string name="rev">Рукотворный кошмар\n\nКогда-то Ревенант был человеком. Наёмным убийцей Синдиката, лучшим из лучших. Он смотрел в зеркало и видел в нём свое человеческое лицо. Но время ничего не щадит, и когда его программа наконец дала сбой, он осознал, во что его превратили «Хаммонд Роботикс» и Синдикат наёмников: кошмар наяву, сотворённый из стали и остатков плоти. Его хозяева возрождали своего верного симулякра, раз за разом вырывая из объятий смерти, а программа заставляла его забывать обо всём.\n\nНастоящее имя: Калеб Кросс\nВозраст: 359\nРодной мир: Неизвестно\nКласс: Штурм\nТактическое умение: Немота\nПассивное умение: Ловец\nСпецумение: Тотем смерти</string>
</resources>